--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="cn.enaium.banl">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="cn.enaium.banl">
+
+    <uses-permission
+            android:name="android.permission.INTERNET"
+            tools:ignore="ManifestOrder"/>
+    <uses-permission
+            android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+            tools:ignore="ScopedStorage"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:requestLegacyExternalStorage="true"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.BiligameAddictionNotLimited"
-            android:requestLegacyExternalStorage="true">
-        <activity android:name=".MainActivity">
+            android:theme="@style/Theme.BiligameAddictionNotLimited">
+        <activity
+                android:name=".SettingsActivity"
+                android:label="@string/title_activity_settings"
+                android:parentActivityName=".MainActivity">
+        </activity>
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait"
+                  android:launchMode="singleTask"
+                  tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -19,7 +36,4 @@
         </activity>
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" tools:ignore="ManifestOrder"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
